--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
       <h1>Introduction</h1>
       <p>I am a web design student, looking to learn more about coding and web development.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born and raised in Atlanta, GA, but have lived in a few other places since then, for short periods of time.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy hiking and mountain bike riding in my spare time. I also enjoy working with Shopify, making a website for my online store.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to become a web developer, or work in the IT field.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I am over the hot, humid summers in Georgia. I think I would like to live somewhere where it is not as hot.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I would like to become a web developer because I enjoy playing asround with making website in my spare time. I know a few basics to html, but I still consider myself a beginner, and there is much, much more to learn.</p>
     </section>
 
     <footer id="footer">
