adding more details

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am a web design student, looking to learn more about coding and web development.</p>
+      <p>I am a web design student, and am looking to learn more about coding and web development.</p>
       <h1>Where I'm From</h1>
       <p>I was born and raised in Atlanta, GA, but have lived in a few other places since then, for short periods of time.</p>
       <h1>What are your favorite hobbies?</h1>
