--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h1>Introduction</h1>
       <p>I am a web design student, and am looking to learn more about coding and web development.</p>
       <h1>Where I'm From</h1>
-      <p>I was born and raised in Atlanta, GA, but have lived in a few other places since then, for short periods of time.</p>
+      <p>I was born and raised in Atlanta, GA, but I have lived in a few other places since then, for short periods of time.</p>
       <h1>What are your favorite hobbies?</h1>
       <p>I enjoy hiking and mountain bike riding in my spare time. I also enjoy working with Shopify, making a website for my online store.</p>
       <h1>What's your dream job?</h1>
